blog alignment fixed

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -56,7 +56,7 @@
 	background-color: #4c7da6;
 }
 
-.nav > li > a {
+/* .nav > li > a {
     padding-top: 5px;
     padding-bottom: 7px;
 	padding-left: 12px;
@@ -66,7 +66,7 @@
 .nav > li > a.active {
     padding-top: 5px;
     padding-bottom: 5px;
-}
+} */
 
 .navbar a {
 	color: beige !important;
